			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04k: *********************************

BUG: (4/27/06, GVG) Exception in printing due to WindowFrame being null (Bug #953)
FIX: Detect wf==null in EditWindow.fireCellHistoryStatus() (dirty fix!)

BUG: (4/26/06, GVG) Get info dialog box remains behind other windows (Bug #949). Affecting only MacOSX apparently.
FIX: Fixing unexpected change done for bug #878.

IMP: (4/25/06, GVG) Aligning metals based on maximum numbers assigned to reserved tracks and spacing values in 
template fill generator otherwise tracks get misaligned.

IMP: (4/24/06, GVG) Preparing AFG dialog box for release

IMP: (4/24/06, GVG) Tests plugin refactored. Added DRC tests for primitive nodes using TechEdit
functions.

************************* Version 8.04j: *********************************

IMP: (4/21/06, GVG) Better handling of unknown HSPICE versions in Electric (Bug #942)

BUG: (4/20/06, GVG) print info for selected node doesn't work in LE (Bug #944)
FIX: Mistake when Highlight2 was introduced.

IMP: (4/20/06, GVG) Snapping to grid (Bug #899). Elements in Clipboard.copyListToCell() get snapped to grid.
Similar to Bug #937 solution.

IMP: (4/20/06, GVG) Avoing null exception if Manual index can't be found (no Bugzilla)

IMP: (4/20/06, GVG) Making sure exports on icon are on grid (Bug #937)

BUG: (4/20/06, GVG) Inconsistent cell displayed after undo that deletes that cell (Bug #927)
FIX: Extra code in UserInterfaceMain.firePropertyChange to clean current cells in WindowFrame if they are not
longer linked.

BUG: (4/18/06, GVG) SPICE template for CCVS fixed (reported by Ian).

IMP: (4/18/06, GVG) More changes in DRC dates.

BUG: (4/18/06, GVG) Exception in VectorCellGroup:clean because exports list is null.
FIX: Put the condition.

BUG: (4/15/06, GVG) ErrorLogger XML reader crashing if geom was null (NodeInst or ArcInst)